--- a/survey.html
+++ b/survey.html
@@ -56,10 +56,7 @@
         <br>
 
         <p>
-            <strong>
-                PLEASE
-            </strong>
-            take a minute to fill out this survey and tell us how we can become better.
+            <strong>PLEASE</strong>take a minute to fill out this survey and tell us how we can become better.
         </p>
     </main>
 
