--- a/quiz.html
+++ b/quiz.html
@@ -24,7 +24,7 @@
 
 
 <body>
-    <form action="data.json" method="POST">
+    <form>
         <fieldset>
             <legend>Links to other pages</legend>
             <nav>
@@ -40,7 +40,7 @@
     </form>
 
     <main>
-        <form>
+        <form action="data.json" method="POST">
             <fieldset>
                 <legend>Multiple Choice</legend>
                 <p>
@@ -70,7 +70,7 @@
                 </p>
 
                 <p>
-                    What is the <em>most popular</em> name for Dec.25 <sup>th</sup>
+                    What is the <em>most popular</em> name for Dec. 25<sup>th</sup>
 
                 <ul>
                     <li>
@@ -80,7 +80,7 @@
 
                     <li>
                         <label for="thanksgiving">
-                            <input type="radio" id="thanksgiving" name="user.answertwo">Christmas</label>
+                            <input type="radio" id="thanksgiving" name="user.answertwo">Thanksgiving</label>
                     </li>
 
                     <li>
