--- a/quiz.html
+++ b/quiz.html
@@ -24,20 +24,19 @@
 
 
 <body>
-    <form>
-        <fieldset>
-            <legend>Links to other pages</legend>
-            <nav>
-                <!--Add a menu for legal Reasons-->
+
+    <nav>
+        <form>
+            <fieldset>
+                <legend>Links to other pages</legend>
                 <ul>
                     <li><a href="index.html">Home Page</a></li>
                     <li><a href="quiz.html">Quiz</a></li>
                     <li><a href="survey.html">Survey</a></li>
-                    <!--Add a sreach bar-->
                 </ul>
-            </nav>
-        </fieldset>
-    </form>
+            </fieldset>
+        </form>
+    </nav>
 
     <main>
         <form action="data.json" method="POST">
@@ -45,6 +44,7 @@
                 <legend>Multiple Choice</legend>
                 <p>
                     What is the <em>scientific</em> name of H<sub>2</sub>O
+                </p>
 
                 <ul>
                     <li>
@@ -67,10 +67,11 @@
                             <input type="radio" id="water" name="user.answerone">Water</label>
                     </li>
                 </ul>
-                </p>
+
 
                 <p>
-                    What is the <em>most popular</em> name for Dec. 25<sup>th</sup>
+                    What is the <em>most popular</em> name for Dec.25 <sup>th</sup>
+                </p>
 
                 <ul>
                     <li>
@@ -80,7 +81,7 @@
 
                     <li>
                         <label for="thanksgiving">
-                            <input type="radio" id="thanksgiving" name="user.answertwo">Thanksgiving</label>
+                            <input type="radio" id="thanksgiving" name="user.answertwo">Christmas</label>
                     </li>
 
                     <li>
@@ -93,10 +94,11 @@
                             <input type="radio" id="halloween" name="user.answertwo">Halloween</label>
                     </li>
                 </ul>
-                </p>
+
 
                 <p>
                     Which of the following of the chemical code's is <strong>sugar?</strong>
+                </p>
 
                 <ul>
                     <li>
@@ -119,10 +121,11 @@
                         <label for="sugarcodefour">C<sub>11</sub>H<sub>22</sub>O<sub>11</sub></label>
                     </li>
                 </ul>
-                </p>
+
 
                 <p>
                     Which of the following are <strong>even?</strong>
+                </p>
 
                 <ul>
                     <li>
@@ -145,7 +148,6 @@
                         <label for="evenfour">4<sup>th</sup></label>
                     </li>
                 </ul>
-                </p>
 
                 <p>
                     <button type="submit">Submit</button>
@@ -153,6 +155,7 @@
             </fieldset>
         </form>
     </main>
+
 </body>
 
 </html>
