fixed way code was write; site still looks the same

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </strong>
         </p>
 
-        <form>
+        <form action="data.json" method="POST">
             <fieldset>
                 <legend>User information</legend>
                 <ul>
