--- a/quiz.html
+++ b/quiz.html
@@ -70,7 +70,7 @@
 
 
                 <p>
-                    What is the <em>most popular</em> name for Dec.25 <sup>th</sup>
+                    What is the <em>most popular</em> name for Dec. 25<sup>th</sup>
                 </p>
 
                 <ul>
@@ -97,7 +97,7 @@
 
 
                 <p>
-                    Which of the following of the chemical code's is <strong>sugar?</strong>
+                    Which of the following of the chemical code's is for <strong>sugar?</strong>
                 </p>
 
                 <ul>
