--- a/survey.html
+++ b/survey.html
@@ -52,7 +52,7 @@
             <strong>PLEASE</strong> take a minute to fill out this survey and tell us how we can become better.
         </p>
 
-        <form>
+        <form action="data.json" method="POST">
             <fieldset>
                 <legend>Survey</legend>
                 <ul>
