fixed way code was write; site still looks the same

--- a/quiz.html
+++ b/quiz.html
@@ -81,7 +81,7 @@
 
                     <li>
                         <label for="thanksgiving">
-                            <input type="radio" id="thanksgiving" name="user.answertwo">Christmas</label>
+                            <input type="radio" id="thanksgiving" name="user.answertwo">Thanksgiving</label>
                     </li>
 
                     <li>
